# matplotplusplus

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  LICENSE  Matplot++-config.cmake.in  Matplot++Config.cmake.in  README.md  _config.yml  examples.md  gallery.md  index.html  index.md  matplot++-config.cmake.in  mkdocs.yml  sitemap.xml
examples/: CMakeLists.txt
examples/annotations/: CMakeLists.txt
examples/annotations/arrow/: CMakeLists.txt  arrow_1.cpp  arrow_2.cpp
examples/annotations/ellipse/: CMakeLists.txt  ellipse_1.cpp
examples/annotations/fill/: CMakeLists.txt  fill_1.cpp
examples/annotations/line/: CMakeLists.txt  line_1.cpp
examples/annotations/rectangle/: CMakeLists.txt  rectangle_1.cpp  rectangle_2.cpp  rectangle_3.cpp  rectangle_4.cpp  rectangle_5.cpp
examples/annotations/text/: CMakeLists.txt  text_1.cpp  text_2.cpp  text_3.cpp  text_4.cpp  text_5.cpp  text_6.cpp  text_7.cpp  text_8.cpp
examples/annotations/textarrow/: CMakeLists.txt  textarrow_1.cpp  textarrow_2.cpp
examples/annotations/textbox/: CMakeLists.txt  textbox_1.cpp
examples/appearance/: CMakeLists.txt
examples/appearance/axes/: CMakeLists.txt  axes_1.cpp  axes_2.cpp  axes_3.cpp  axes_4.cpp
examples/appearance/axis/: CMakeLists.txt
examples/appearance/camera/: CMakeLists.txt
examples/appearance/cla/: CMakeLists.txt  cla_1.cpp  cla_2.cpp  cla_3.cpp
examples/appearance/colormaps/: CMakeLists.txt
examples/appearance/figure/: CMakeLists.txt  figure_1.cpp  figure_2.cpp  figure_3.cpp
examples/appearance/grid/: CMakeLists.txt
examples/appearance/labels/: CMakeLists.txt
examples/appearance/line_spec/: CMakeLists.txt  line_spec_1.cpp
examples/appearance/multiplot/: CMakeLists.txt
examples/contour_plots/: CMakeLists.txt
examples/contour_plots/contour/: CMakeLists.txt  contour_1.cpp  contour_2.cpp  contour_3.cpp  contour_4.cpp  contour_5.cpp  contour_6.cpp  contour_7.cpp  contour_8.cpp
examples/contour_plots/contourf/: CMakeLists.txt  contourf_1.cpp  contourf_2.cpp  contourf_3.cpp  contourf_4.cpp  contourf_5.cpp  contourf_6.cpp
examples/contour_plots/fcontour/: CMakeLists.txt  fcontour_1.cpp  fcontour_10.cpp  fcontour_11.cpp  fcontour_2.cpp  fcontour_3.cpp  fcontour_4.cpp  fcontour_5.cpp  fcontour_6.cpp  fcontour_7.cpp  fcontour_8.cpp  fcontour_9.cpp
examples/data_distribution/: CMakeLists.txt
examples/data_distribution/binscatter/: CMakeLists.txt  binscatter_1.cpp  binscatter_2.cpp  binscatter_3.cpp  binscatter_4.cpp  binscatter_5.cpp  binscatter_6.cpp  binscatter_7.cpp
examples/data_distribution/boxplot/: CMakeLists.txt  boxplot_1.cpp  boxplot_2.cpp  boxplot_3.cpp
examples/data_distribution/heatmap/: CMakeLists.txt  heatmap_1.cpp  heatmap_2.cpp  heatmap_3.cpp  heatmap_4.cpp  heatmap_5.cpp  heatmap_6.cpp  heatmap_7.cpp
examples/data_distribution/histogram/: CMakeLists.txt  histogram_1.cpp  histogram_10.cpp  histogram_11.cpp  histogram_12.cpp  histogram_13.cpp  histogram_14.cpp  histogram_15.cpp  histogram_2.cpp  histogram_3.cpp  histogram_4.cpp  histogram_5.cpp  histogram_6.cpp  histogram_7.cpp  histogram_8.cpp  histogram_9.cpp
examples/data_distribution/parallelplot/: CMakeLists.txt  parallelplot_1.cpp  parallelplot_2.cpp  parallelplot_3.cpp
examples/data_distribution/pie/: CMakeLists.txt  pie_1.cpp  pie_2.cpp  pie_3.cpp  pie_4.cpp  pie_5.cpp  pie_6.cpp
examples/data_distribution/plotmatrix/: CMakeLists.txt  plotmatrix_1.cpp  plotmatrix_2.cpp  plotmatrix_3.cpp  plotmatrix_4.cpp
examples/data_distribution/scatter/: CMakeLists.txt  scatter_1.cpp  scatter_2.cpp  scatter_3.cpp  scatter_4.cpp  scatter_5.cpp  scatter_6.cpp  scatter_7.cpp  scatter_8.cpp
examples/data_distribution/scatter3/: CMakeLists.txt  scatter3_1.cpp  scatter3_2.cpp  scatter3_3.cpp  scatter3_4.cpp  scatter3_5.cpp  scatter3_6.cpp  scatter3_7.cpp
examples/data_distribution/wordcloud/: CMakeLists.txt  en_blacklist.txt  shakespeare_sonnets.txt  wordcloud_1.cpp  wordcloud_2.cpp  wordcloud_3.cpp  wordcloud_4.cpp
examples/discrete_data/: CMakeLists.txt
examples/discrete_data/bar/: CMakeLists.txt  bar_1.cpp  bar_10.cpp  bar_11.cpp  bar_12.cpp  bar_13.cpp  bar_2.cpp  bar_3.cpp  bar_4.cpp  bar_5.cpp  bar_6.cpp  bar_7.cpp  bar_8.cpp  bar_9.cpp
examples/discrete_data/pareto/: CMakeLists.txt  pareto_1.cpp  pareto_2.cpp  pareto_3.cpp  pareto_4.cpp
examples/discrete_data/stem/: CMakeLists.txt  stem_1.cpp  stem_2.cpp  stem_3.cpp  stem_4.cpp  stem_5.cpp  stem_6.cpp  stem_7.cpp  stem_8.cpp  stem_9.cpp
examples/discrete_data/stem3/: CMakeLists.txt  stem3_1.cpp  stem3_10.cpp  stem3_11.cpp  stem3_2.cpp  stem3_3.cpp  stem3_4.cpp  stem3_5.cpp  stem3_6.cpp  stem3_7.cpp  stem3_8.cpp  stem3_9.cpp
examples/exporting/: CMakeLists.txt
examples/exporting/save/: .gitignore  CMakeLists.txt  save_1.cpp  save_2.cpp  save_3.cpp  save_4.cpp  save_5.cpp  save_6.cpp  save_7.cpp  save_8.cpp
examples/geography/: CMakeLists.txt
examples/geography/geobubble/: CMakeLists.txt  geobubble_1.cpp  geobubble_2.cpp
examples/geography/geodensityplot/: CMakeLists.txt  geodensityplot_1.cpp
examples/geography/geoplot/: CMakeLists.txt  geoplot_1.cpp  geoplot_2.cpp  geoplot_3.cpp  geoplot_4.cpp  geoplot_5.cpp  geoplot_6.cpp  geoplot_7.cpp
examples/geography/geoscatter/: CMakeLists.txt  geoscatter_1.cpp  geoscatter_2.cpp
examples/graphs/: CMakeLists.txt
examples/graphs/digraph/: CMakeLists.txt  digraph_1.cpp  digraph_2.cpp  digraph_3.cpp
examples/graphs/graph/: CMakeLists.txt  graph_1.cpp  graph_2.cpp  graph_3.cpp  graph_4.cpp  graph_5.cpp  graph_6.cpp
examples/images/: CMakeLists.txt
examples/images/image/: CMakeLists.txt  image_1.cpp  image_2.cpp  image_3.cpp  (+2 more)
examples/line_plot/: CMakeLists.txt
examples/polar_plots/: CMakeLists.txt
examples/surfaces/: CMakeLists.txt
examples/vector_fields/: CMakeLists.txt
source/matplot/: CMakeLists.txt  FindDependencies.cmake  matplot.h
test/backends/: CMakeLists.txt  main.cpp  ogl_embed_main.cpp  ogl_main.cpp
test/generate_examples/: CMakeLists.txt  README.md  main.cpp
test/integration/: CMakeLists.txt  main.cpp
(+834 files in other folders)
