add_subdirectory(line_plot)
add_subdirectory(data_distribution)
add_subdirectory(discrete_data)
add_subdirectory(geography)
add_subdirectory(polar_plots)
add_subdirectory(contour_plots)
add_subdirectory(vector_fields)
add_subdirectory(surfaces)
add_subdirectory(graphs)
add_subdirectory(images)
add_subdirectory(annotations)
add_subdirectory(appearance)
add_subdirectory(exporting)
