macro(add_matplot_example TARGET_NAME)
    add_executable(${TARGET_NAME} ${ARGN})
    target_link_libraries(${TARGET_NAME} PRIVATE matplot)
    maybe_target_pedantic_warnings(${TARGET_NAME})
    if (MATPLOTPP_BUILD_TESTS)
        add_test(NAME ${TARGET_NAME} COMMAND ${TARGET_NAME})
        set_tests_properties(${TARGET_NAME} PROPERTIES ENVIRONMENT "GNUTERM=dumb")
    endif()
endmacro()

add_subdirectory(line_plot)
add_subdirectory(data_distribution)
add_subdirectory(discrete_data)
add_subdirectory(geography)
add_subdirectory(polar_plots)
add_subdirectory(contour_plots)
add_subdirectory(vector_fields)
add_subdirectory(surfaces)
add_subdirectory(graphs)
add_subdirectory(images)
add_subdirectory(annotations)
add_subdirectory(appearance)
add_subdirectory(exporting)
